Regression: shift click on the modifier link button do not create override #100412

Closed
opened 2022-08-15 13:22:13 +02:00 by Vyacheslav Kobozev · 10 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95

Blender Version
Broken: version: 3.3.0 Beta, branch: master, commit date: 2022-08-07 20:54, hash: e4938b163e
Broken 3.2.2, bcfdb14560e7, 2022-08-02 18:15
Worked: 3.1.2

Change came in d8abac7357

Short description of error
shift click on the modifier link button do not create override

Steps to reproduce
T100412_src.blend

T100412_main.blend

  • Open 100412_main.blend
  • try to {key Shift click} the chain icon of the modifier
    image.png
  • no override is created

Original report
Just as title say.
This button do not work in 3.3
изображение.png

2022-08-15_14-19-50.mp4

**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95 **Blender Version** Broken: version: 3.3.0 Beta, branch: master, commit date: 2022-08-07 20:54, hash: `e4938b163e` Broken 3.2.2, `bcfdb14560e7`, 2022-08-02 18:15 Worked: 3.1.2 Change came in d8abac7357 **Short description of error** shift click on the modifier link button do not create override **Steps to reproduce** [T100412_src.blend](https://archive.blender.org/developer/F13387280/T100412_src.blend) [T100412_main.blend](https://archive.blender.org/developer/F13387281/T100412_main.blend) - Open 100412_main.blend - try to {key Shift click} the chain icon of the modifier ![image.png](https://archive.blender.org/developer/F13387288/image.png) - no override is created **Original report** Just as title say. This button do not work in 3.3 ![изображение.png](https://archive.blender.org/developer/F13387146/изображение.png) [2022-08-15_14-19-50.mp4](https://archive.blender.org/developer/F13387144/2022-08-15_14-19-50.mp4)

Added subscriber: @Vyach

Added subscriber: @Vyach
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check

Can confirm, will check
Member

Added subscriber: @mont29

Added subscriber: @mont29
Member

Change came in d8abac7357
Not 100% sure if this is intended behavior (also tried making override editable in the outliner to no avail...).
@mont29 probably knows more.

Change came in d8abac7357 Not 100% sure if this is intended behavior (also tried making override editable in the outliner to no avail...). @mont29 probably knows more.

In #100412#1403886, @lichtwerk wrote:
Not 100% sure if this is intended behavior

Override still possible/desirable and tooltip says, that it should be possible.
So I am sure, its unintended

> In #100412#1403886, @lichtwerk wrote: > Not 100% sure if this is intended behavior Override still possible/desirable and tooltip says, that it should be possible. So I am sure, its unintended

Thing is, we switched from 'basic' override to hierarchy override from the ID template as well. This is nicer for user - when it works. ID template does not always have enough contextual info to build a hierarchy to override...

That being said, think it should be possible to make this work in that case, will check.

Thing is, we switched from 'basic' override to hierarchy override from the ID template as well. This is nicer for user - when it works. ID template does not always have enough contextual info to build a hierarchy to override... That being said, think it should be possible to make this work in that case, will check.

This issue was referenced by 8aa094263b

This issue was referenced by 8aa094263b91d47c2bf5f4a944be722d8d0d46aa

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-08-16 14:39:43 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100412
No description provided.