Fix T100412: LibOverride: shift click on the modifier link button do not create override

Add support for the (geometry)node tree case.

Also add warning about not being implemented for other types.